--- a/default.css
+++ b/default.css
@@ -1,9 +1,65 @@
 #header {
   background-color:#A7DBD8;
-  height:100px;
+  height:200px;
 }
+
+#headshot {
+	padding-top: 10px;
+}
+
 
 h1 {
   text-align: center;
   font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+  font-size: 55px;
+}
+
+.bio-text {
+	text-align: left;
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	font-size: 16px;
+}
+
+p {
+	text-align: center;
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	font-size: 16px;
+}
+
+.header-spacing {
+	font-size:0pt; 
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	line-height:0pt; 
+	text-align:left;
+	width: 3px;
+	background-color:#ffffff;
+}
+
+.link {
+	color: #ffffff;
+	text-decoration: none;
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	font-size: 30px;
+}
+
+.link-text {
+	color:#ffffff;
+	text-decoration: none
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	font-size: 30px;
+}
+
+.footer {
+	text-align: left;
+	text-decoration: none;
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	font-size: 20px;
+
+}
+
+.footer-link {
+	text-decoration: none;
+	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+	font-size: 20px;
+
 }
