--- a/default.css
+++ b/default.css
@@ -3,6 +3,8 @@
 }
 
 header {
+  margin-left:20px;
+  margin-right:20px;
   height:220px;
   background-image: url(http://fc09.deviantart.net/fs71/f/2013/180/1/2/blackboard_texture_2_by_allthingsprecious-d6bab3c.jpg);
 }
@@ -10,23 +12,28 @@ header {
 footer {
   height:200px;
   background-image: url(http://fc09.deviantart.net/fs71/f/2013/180/1/2/blackboard_texture_2_by_allthingsprecious-d6bab3c.jpg);
+}
 
+section{
+  margin-left: 80px;
+  margin-right: 60px;
+  float:center;
 }
 
 
 #headshot {
-	padding-top: 10px;
+	padding-top: 20px;
+  float:left;
 }
 
 
 #blog-image {
-	float: center;
+	margin-left: 40%;
 }
 
 a {
 	text-decoration: none;
   text-align: left;
-  font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
   font-size: 16px
 }
 
@@ -40,6 +47,7 @@ a:clicked {
 
 #h1 {
   font-size:55px;
+  text-align: center;
 }
 
 .headline-text {
@@ -57,49 +65,31 @@ a:clicked {
 
 p {
 	text-align: center;
-	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
 	font-size: 16px;
 }
 
 #copyright{
-	text-align: center;
-	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+  margin-right:40%;
 	font-size: 16px;
 	color:white;
-}
-
-
-.header-spacing {
-	font-size:0;
-	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
-	line-height:0;
-	text-align:left;
-	width: 3em;
-	background-color:#ffffff;
 }
 
 .link {
 	color: #ffffff;
 	text-decoration: none;
-	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
 	font-size: 30px;
+  margin-left: 70%;
 }
 
-.link-text {
-	color:#ffffff;
-	text-decoration: none
-	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
-	font-size: 30px;
+.nav-link {
+  float:left;
 }
 
 
 .footer-link {
 	text-decoration: none;
-	font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
 	font-size: 20px;
 }
-
-
 
 .footer-img{
 	float:left;
@@ -109,12 +99,26 @@ p {
 	padding-right: 1em;
 }
 
+.header-img{
+  float:left;
+  display: inline-block;
+  height: 57px;
+  width: 57px;
+  padding-right: 1em;
+}
+
 #social-footer {
 	margin-left:40%;
 	display:block;
 }
 
 #social-header {
+  margin-top:40px;
 	margin-left:70%;
-	display:inline-block;
+	display:block;
+}
+
+#nav {
+  display:block;
+  margin-top: 20px;
 }
