--- a/default.css
+++ b/default.css
@@ -9,11 +9,6 @@ header {
   background-image: url(http://fc09.deviantart.net/fs71/f/2013/180/1/2/blackboard_texture_2_by_allthingsprecious-d6bab3c.jpg);
 }
 
-footer {
-  height:200px;
-  background-image: url(http://fc09.deviantart.net/fs71/f/2013/180/1/2/blackboard_texture_2_by_allthingsprecious-d6bab3c.jpg);
-}
-
 section{
   margin-left: 80px;
   margin-right: 60px;
@@ -124,6 +119,6 @@ p {
 }
 
 .blog-list {
-  text-align: left;
+  text-align: center;
   font-size: 20px;
 }
