--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,21 @@ names based on abbreviations (http://docs.emmet.io/cheat-sheet/)
 .bds-solid { border-style: solid;}
 .bdc-fog { border-color: #e1e8ed}
 
-.tt--logo{ width: 50px;}
+.tt--garfi{
+  width:350px;
+  height:234px;}
+
+tt--css{
+  width:190px
+  height:190px;
+}
+
+tt--css2{
+  width: 335px;
+  height:89px;
+
+}
+
 
 
 
