--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,8 +11,8 @@
 }
 
 .site-title {
-    font-size: 26px;
-    line-height: 56px;
+    font-size: 48px;
+    line-height: 66px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -75,8 +75,7 @@
         }
 
         &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
+            display: none;
         }
 
         .page-link {
@@ -159,7 +158,7 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 26px;
 }
 
 .post-list {
@@ -178,7 +177,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
