--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,23 +5,22 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    background: hsl(210, 45, 10);
 
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
+    color: #26d991;
     font-size: 28px;
     line-height: 57px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
 }
+
+
 
 .site-nav {
     float: right;
@@ -32,7 +31,7 @@
     }
 
     .page-link {
-        color: $text-color;
+        color: #26d991;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
@@ -153,6 +152,9 @@
 /**
  * Page content
  */
+.center-text {
+    text-align:center;
+}
 .page-content {
     padding: $spacing-unit 0;
 }
