--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,10 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
+$purple-color:    #b526d9;
+$green-color:     #26d991;
 $background-color: #fdfdfd;
+$background-color-dark: hsl(210, 45, 10);
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
