--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -50,6 +50,12 @@ ul, ol, dl, figure,
     border-radius: 50%;
 }
 
+img.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
 
 
 /**
