--- a/css/index.css
+++ b/css/index.css
@@ -357,6 +357,14 @@ h1, h2, h3, h4, h5, h6, p {
     opacity: 0;
 }*/
 
+
+/* ==========================================================================
+   Nav Bar
+   ========================================================================== */
+
+
+
+
 /* ==========================================================================
    All Sections
    ========================================================================== */
