Add nav bar css

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
-/* ==========================================================================
-   General
-   ========================================================================== */
-
+/* --------------------------
+  Main Styles
+--------------------------- */
 * {
     padding: 0;
     margin: 0;
@@ -22,9 +21,7 @@ body {
     height: 100%;
 }
 
-*,
-*:after,
-*::before {
+*, *:after, *::before {
 -moz-box-sizing: border-box;
      box-sizing: border-box;
 }
@@ -53,16 +50,11 @@ img {
     vertical-align: middle;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:active {
+a:link, a:visited, a:hover, a:active {
     text-decoration: none;
 }
 
-ol,
-ul,
-li {
+ol, ul, li {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -107,9 +99,9 @@ h1, h2, h3, h4, h5, h6, p {
     font-style: normal;
 }
 
-/* ==========================================================================
-   Buttons
-   ========================================================================== */
+/* --------------------------
+  Buttons
+--------------------------- */
 
 .but {
     display: inline-block;
@@ -119,6 +111,7 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 16px;
     padding: 0 45px;
     line-height: 55px;
+    /*background-color: #bbc4ef;*/
     background-color: #F10061;
 
     -webkit-border-radius: 45px;
@@ -138,39 +131,13 @@ h1, h2, h3, h4, h5, h6, p {
             transition: background-color 0.3s ease;
 }
 
-.off {
-    display: inline-block;
-    padding: 0 45px;
-    line-height: 55px;
-    background-color: rgba(255, 255, 255, 0.2);
-    cursor: default;
-
-    -webkit-border-radius: 45px;
-       -moz-border-radius: 45px;
-            border-radius: 45px;
-
-    -webkit-background-clip: padding-box;
-       -moz-background-clip: padding-box;
-            background-clip: padding-box;
-
-    color: #fff;
-    border: 0;
-
-    -webkit-transition: background-color 0.3s ease, color 0.3s ease;
-       -moz-transition: background-color 0.3s ease, color 0.3s ease;
-         -o-transition: background-color 0.3s ease, color 0.3s ease;
-            transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.but:hover,
-.but:active {
+.but:hover, .but:active {
     background-color: #F83E89;
 }
 
-/* ==========================================================================
-   Header
-   ========================================================================== */
-
+/* --------------------------
+  Header
+--------------------------- */
 .menu {
     position: fixed;
     top: 0;
@@ -358,16 +325,9 @@ h1, h2, h3, h4, h5, h6, p {
 }*/
 
 
-/* ==========================================================================
-   Nav Bar
-   ========================================================================== */
-
-
-
-
-/* ==========================================================================
-   All Sections
-   ========================================================================== */
+/* --------------------------
+  All Sections
+--------------------------- */
 
 #about,
 #services,
@@ -405,13 +365,12 @@ h1, h2, h3, h4, h5, h6, p {
     color: #b0b0b0;
 }
 
-/* ==========================================================================
+/* -------------
    Home
-   ========================================================================== */
+   ------------- */
 
 #home {
-    /*background-color: #000;*/
-    background-image: url(../imgs/background-6.jpg);
+    background-image: url(../imgs/background-11.jpg);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
@@ -474,10 +433,9 @@ h1, h2, h3, h4, h5, h6, p {
     opacity: 0;
 }
 
-/* ==========================================================================
-   About
-   ========================================================================== */
-
+/* --------------------------
+  About
+--------------------------- */
 #about {
     padding-bottom: 90px;
     background-color: #fff;
@@ -487,9 +445,10 @@ h1, h2, h3, h4, h5, h6, p {
     margin-top: 90px;
 }
 
-/* ==========================================================================
-   Services
-   ========================================================================== */
+
+/* --------------------------
+  Skills
+--------------------------- */
 
 #services {
     padding-top: 0;
@@ -519,10 +478,9 @@ h1, h2, h3, h4, h5, h6, p {
     text-transform: uppercase;
 }
 
-/* ==========================================================================
-   Work
-   ========================================================================== */
-
+/* --------------------------
+  Projects
+--------------------------- */
 #work {
     background-color: #fff;
 }
@@ -578,9 +536,9 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight: 400;
 }
 
-/* ==========================================================================
-   Contact
-   ========================================================================== */
+/* --------------------------
+  Social
+--------------------------- */
 
 .social [class^="icon-"],
 .social [class*=" icon-"] {
@@ -641,10 +599,10 @@ h1, h2, h3, h4, h5, h6, p {
     content: "\e603";
 }
 
-/* ==========================================================================
-   Footer
-   ========================================================================== */
 
+/* --------------------------
+  Footer
+--------------------------- */
 #footer {
     background-color: #000;
     color: #fff;
@@ -673,9 +631,9 @@ h1, h2, h3, h4, h5, h6, p {
     color: #F83E89;
 }
 
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
+/* --------------------------
+  Media Queries
+--------------------------- */
 
 .col {
     border:0px solid rgba(0,0,0,0);
@@ -691,7 +649,6 @@ h1, h2, h3, h4, h5, h6, p {
 
 
     /* 1. 12 Column Grid 0px - 319px
-    -----------------------------------------------------------------------------
 
     Span 1:    8.33333333333%
     Span 2:    16.6666666667%
@@ -706,7 +663,7 @@ h1, h2, h3, h4, h5, h6, p {
     Span 11:    91.6666666667%
     Span 12:    100%
 
-    ----------------------------------------------------------------------------- */
+     */
 
     @media screen and (min-width: 0px) and (max-width: 319px) {
 
@@ -821,7 +778,6 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     /* 2. 12 Column Grid 320px - 459px
-    -----------------------------------------------------------------------------
 
     Span 1:    8.33333333333%
     Span 2:    16.6666666667%
@@ -835,8 +791,7 @@ h1, h2, h3, h4, h5, h6, p {
     Span 10:    83.3333333333%
     Span 11:    91.6666666667%
     Span 12:    100%
-
-    ----------------------------------------------------------------------------- */
+    */
 
     @media screen and (min-width: 320px) and (max-width: 459px) {
 
@@ -963,7 +918,6 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     /* 3. 12 Column Grid 460px - 779px
-    -----------------------------------------------------------------------------
 
     Span 1:    8.33333333333%
     Span 2:    16.6666666667%
@@ -977,8 +931,7 @@ h1, h2, h3, h4, h5, h6, p {
     Span 10:    83.3333333333%
     Span 11:    91.6666666667%
     Span 12:    100%
-
-    ----------------------------------------------------------------------------- */
+    */
 
     @media screen and (min-width: 460px) and (max-width: 779px) {
 
@@ -1087,7 +1040,6 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     /* 4. 12 Column Grid 780px - 1199px
-    -----------------------------------------------------------------------------
 
     Span 1:    8.33333333333%
     Span 2:    16.6666666667%
@@ -1101,8 +1053,7 @@ h1, h2, h3, h4, h5, h6, p {
     Span 10:    83.3333333333%
     Span 11:    91.6666666667%
     Span 12:    100%
-
-    ----------------------------------------------------------------------------- */
+    */
 
     @media screen and (min-width: 780px) and (max-width: 1199px) {
 
@@ -1113,10 +1064,6 @@ h1, h2, h3, h4, h5, h6, p {
             border-left-width:24px;
             padding:0 0px;
         }
-
-
-
-
         .span_1 {
             width:8.33333333333%;
         }
@@ -1172,7 +1119,6 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     /* 5. 12 Column Grid 1200px - Infinity
-    -----------------------------------------------------------------------------
 
     Span 1:    8.33333333333%
     Span 2:    16.6666666667%
@@ -1186,8 +1132,7 @@ h1, h2, h3, h4, h5, h6, p {
     Span 10:    83.3333333333%
     Span 11:    91.6666666667%
     Span 12:    100%
-
-    ----------------------------------------------------------------------------- */
+    */
 
     @media screen and (min-width: 1200px) {
 
@@ -1198,10 +1143,6 @@ h1, h2, h3, h4, h5, h6, p {
             border-left-width:24px;
             padding:0 0px;
         }
-
-
-
-
         .span_1 {
             width:8.33333333333%;
         }
