--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,6 @@ h1, h2, h3, h4, h5, h6, p {
     left: 0px;
     right: 0px;
     top: 0px;
-    /*background-color: rgba(0, 0, 0, 0.6);*/
     background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -431,22 +430,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 
 
-    /* 1. 12 Column Grid 0px - 319px
-
-    Span 1:    8.33333333333%
-    Span 2:    16.6666666667%
-    Span 3:    25.0%
-    Span 4:    33.3333333333%
-    Span 5:    41.6666666667%
-    Span 6:    50.0%
-    Span 7:    58.3333333333%
-    Span 8:    66.6666666667%
-    Span 9:    75.0%
-    Span 10:    83.3333333333%
-    Span 11:    91.6666666667%
-    Span 12:    100%
-
-     */
+    /* 1. 12 Column Grid 0px - 319px */
 
     @media screen and (min-width: 0px) and (max-width: 319px) {
 
@@ -500,7 +484,7 @@ h1, h2, h3, h4, h5, h6, p {
             margin-bottom: 60px;
         }
 
-        .skills-team ul {
+        .skills-concepts ul {
             margin-bottom: 0;
         }
 
@@ -546,9 +530,9 @@ h1, h2, h3, h4, h5, h6, p {
         .home-title,
         .about-title,
         .about-description,
-        .skills-design,
-        .skills-frontend,
-        .skills-team,
+        .skills-languages,
+        .skills-frameworks,
+        .skills-concepts,
         .project-title,
         .project-description,
         .project-item,
@@ -560,21 +544,7 @@ h1, h2, h3, h4, h5, h6, p {
         }
     }
 
-    /* 2. 12 Column Grid 320px - 459px
-
-    Span 1:    8.33333333333%
-    Span 2:    16.6666666667%
-    Span 3:    25.0%
-    Span 4:    33.3333333333%
-    Span 5:    41.6666666667%
-    Span 6:    50.0%
-    Span 7:    58.3333333333%
-    Span 8:    66.6666666667%
-    Span 9:    75.0%
-    Span 10:    83.3333333333%
-    Span 11:    91.6666666667%
-    Span 12:    100%
-    */
+    /* 2. 12 Column Grid 320px - 459px */
 
     @media screen and (min-width: 320px) and (max-width: 459px) {
 
@@ -640,7 +610,7 @@ h1, h2, h3, h4, h5, h6, p {
             margin-bottom: 60px;
         }
 
-        .skills-team ul {
+        .skills-concepts ul {
             margin-bottom: 0;
         }
 
@@ -686,9 +656,9 @@ h1, h2, h3, h4, h5, h6, p {
         .home-title,
         .about-title,
         .about-description,
-        .skills-design,
-        .skills-frontend,
-        .skills-team,
+        .skills-languages,
+        .skills-frameworks,
+        .skills-concepts,
         .project-title,
         .project-description,
         .project-item,
@@ -700,21 +670,7 @@ h1, h2, h3, h4, h5, h6, p {
         }
     }
 
-    /* 3. 12 Column Grid 460px - 779px
-
-    Span 1:    8.33333333333%
-    Span 2:    16.6666666667%
-    Span 3:    25.0%
-    Span 4:    33.3333333333%
-    Span 5:    41.6666666667%
-    Span 6:    50.0%
-    Span 7:    58.3333333333%
-    Span 8:    66.6666666667%
-    Span 9:    75.0%
-    Span 10:    83.3333333333%
-    Span 11:    91.6666666667%
-    Span 12:    100%
-    */
+    /* 3. 12 Column Grid 460px - 779px */
 
     @media screen and (min-width: 460px) and (max-width: 779px) {
 
@@ -781,9 +737,9 @@ h1, h2, h3, h4, h5, h6, p {
             width:25.0%;
         }
         .span_4,
-        .skills-design,
-        .skills-frontend,
-        .skills-team {
+        .skills-languages,
+        .skills-frameworks,
+        .skills-concepts {
             width:33.3333333333%;
         }
         .span_5 {
@@ -822,21 +778,7 @@ h1, h2, h3, h4, h5, h6, p {
         }
     }
 
-    /* 4. 12 Column Grid 780px - 1199px
-
-    Span 1:    8.33333333333%
-    Span 2:    16.6666666667%
-    Span 3:    25.0%
-    Span 4:    33.3333333333%
-    Span 5:    41.6666666667%
-    Span 6:    50.0%
-    Span 7:    58.3333333333%
-    Span 8:    66.6666666667%
-    Span 9:    75.0%
-    Span 10:    83.3333333333%
-    Span 11:    91.6666666667%
-    Span 12:    100%
-    */
+    /* 4. 12 Column Grid 780px - 1199px */
 
     @media screen and (min-width: 780px) and (max-width: 1199px) {
 
@@ -860,9 +802,9 @@ h1, h2, h3, h4, h5, h6, p {
             width:25.0%;
         }
         .span_4,
-        .skills-design,
-        .skills-frontend,
-        .skills-team,
+        .skills-languages,
+        .skills-frameworks,
+        .skills-concepts,
         .project-item {
             width:33.3333333333%;
         }
@@ -901,24 +843,8 @@ h1, h2, h3, h4, h5, h6, p {
         }
     }
 
-    /* 5. 12 Column Grid 1200px - Infinity
-
-    Span 1:    8.33333333333%
-    Span 2:    16.6666666667%
-    Span 3:    25.0%
-    Span 4:    33.3333333333%
-    Span 5:    41.6666666667%
-    Span 6:    50.0%
-    Span 7:    58.3333333333%
-    Span 8:    66.6666666667%
-    Span 9:    75.0%
-    Span 10:    83.3333333333%
-    Span 11:    91.6666666667%
-    Span 12:    100%
-    */
-
+    /* 5. 12 Column Grid 1200px - Infinity */
     @media screen and (min-width: 1200px) {
-
         .row {
             margin-left:-24px;
         }
@@ -939,9 +865,9 @@ h1, h2, h3, h4, h5, h6, p {
             width:25.0%;
         }
         .span_4,
-        .skills-frontend,
-        .skills-design,
-        .skills-team,
+        .skills-frameworks,
+        .skills-languages,
+        .skills-concepts,
         .project-item {
             width:33.3333333333%;
         }
